compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_warning_for_panic_as_last_item_of_pipe_on_next_expression.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1906
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            1 |> wibble |> panic\n            \"unreachable\"\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE

        pub fn wibble(_) { 1 }
        pub fn main() {
            1 |> wibble |> panic
            "unreachable"
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:13
  │
5 │             "unreachable"
  │             ^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.
