compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unreachable_warning_if_all_branches_panic_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1783
expression: "pub fn main() {\n          let n = 1\n          case n {\n            0 -> {\n              panic\n              2\n            }\n            _ -> panic\n          }\n          1\n        }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
          let n = 1
          case n {
            0 -> {
              panic
              2
            }
            _ -> panic
          }
          1
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:6:15
  │
6 │               2
  │               ^

This code is unreachable because it comes after a `panic`.
