compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_alias_for_duplicate_module_no_warning_for_alias_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1103
expression: "\n            import a/wibble\n            import b/wibble as wobble\n            pub const one = wibble.one\n        "
snapshot_kind: text
---
----- SOURCE CODE
-- a/wibble.gleam
pub const one = 1

-- b/wibble.gleam
pub const two = 2

-- main.gleam

            import a/wibble
            import b/wibble as wobble
            pub const one = wibble.one
        

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:3:13
  │
3 │             import b/wibble as wobble
  │             ^^^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
