compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_alias_warning_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1076
expression: "\n            import gleam/wibble.{one} as wobble\n            pub const one = one\n        "
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam
pub const one = 1

-- main.gleam

            import gleam/wibble.{one} as wobble
            pub const one = one
        

----- WARNING
warning: Unused imported module alias
  ┌─ /src/warning/wrn.gleam:2:39
  │
2 │             import gleam/wibble.{one} as wobble
  │                                       ^^^^^^^^^ This alias is never used

Hint: You can safely remove it.

    import gleam/wibble as _


warning: Shadowed Import
  ┌─ /src/warning/wrn.gleam:3:13
  │
3 │             pub const one = one
  │             ^^^^^^^^^^^^^ `one` is defined here

Definition of one shadows an imported value.
The imported value could not be used in this module anyway.
Hint: Either rename the definition or remove the import.
