compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_block_wrapping_pure_expression.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2932
expression: "\npub fn main() {\n  { 1 }\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  { 1 }
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   { 1 }
  │   ^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
