compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_block_wrapping_pure_expressions.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2917
expression: "\npub fn main() {\n  {\n    True\n    1\n  }\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  {
    True
    1
  }
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   {
4 │ │     True
5 │ │     1
6 │ │   }
  │ ╰───^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.

warning: Unused literal
  ┌─ /src/warning/wrn.gleam:4:5
  │
4 │     True
  │     ^^^^ This value is never used

Hint: You can safely remove it.
